Bug 1980228 - Add warning message when text is too long r=Mardak,fluent-reviewers,firefox-ai-ml-reviewers,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D260463

--- a/browser/components/genai/chat.css
+++ b/browser/components/genai/chat.css
@@ -83,6 +83,10 @@ browser {
   }
 }
 
+#message-container {
+  padding: var(--space-xsmall);
+}
+
 #multi-stage-message-root {
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
